[package]
name = "dbquery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14.0"
rusqlite = { version = "0.35", features = ["bundled", "functions"] }
regex = "1.1"
duckdb = { version = "1.2", features = ["bundled"] }
