[workspace]
resolver = "2"

members = [
    "addons/dlt-tools",
    "addons/file-tools",
    "addons/text_grep",
    "indexer_base",
    "indexer_cli",
    "merging",
    "parsers",
    "processor",
    "session",
    "sources",
    "wasm_plugin/host",
]

# only uncomment when profiling
# [profile.release]
# debug = true
