[workspace]
resolver = "2"

members = [
    "addons/dlt-tools",
    "addons/file-tools",
    "addons/text_grep",
    "indexer_base",
    "indexer_cli",
    "merging",
    "parsers",
    "plugins",
    "processor",
    "session",
    "sources",
]

# only uncomment when profiling
# [profile.release]
# debug = true
