[package]
name = "plugin-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
wasmtime = "21.0.0"
parsers = {path = "../../parsers"}
sources = {path = "../../sources"}
serde = "1.0"
# TODO AAZ: The feature preview_1 is included by default but we may not need it
wasmtime-wasi = "21.0.0"

# TODO AAZ: Compare the performance between futures and tokio crates
futures = "0.3.30"
